fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,7 +15,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     width: 80%;
 }
 
